# vc-icon-theme-collection

./: README.md  autogen.sh  configure.ac
themes/: Makefile.am
